prevent element from collapsing

--- a/app/assets/stylesheets/pages/p-dashboards/show.sass
+++ b/app/assets/stylesheets/pages/p-dashboards/show.sass
@@ -80,6 +80,7 @@
 
         .c-my_list
           width: 33.3333%
+          min-height: 285px
           float: left
 
       .c-forum
